--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "choo-meta": "^1.0.3",
     "choo-service-worker": "^2.4.0",
     "cloudinary": "^1.13.2",
+    "date-fns": "^1.30.1",
     "dotenv": "^6.2.0",
     "focus-visible": "^4.1.5",
     "jalla": "^0.12.0-7",
