--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "koa-body": "^4.0.8",
     "koa-compose": "^4.1.0",
     "koa-route": "^3.2.0",
+    "nanolru": "^1.0.0",
     "normalize.css": "^8.0.1",
     "postcss-custom-properties": "^8.0.9",
     "postcss-focus-visible": "^4.0.0",
